@@ -9,6 +9,8 @@ Short Term:
 * Seperate scripts for "all" commands so we can get timing right on ice box.
 * Reformat code w/out tabs
 * vpcd --hung_rpc can cause client to hang forever.
+* Verify that tcp_wrappers works.
+* Do not store interpreted values in intepretation struct.  Use arglist instead!
 
 Long term:
 * Build failure simulator test suite
